--- a/grocery.html
+++ b/grocery.html
@@ -38,6 +38,7 @@
     </div>
   </nav>
 
+  <button type="button" onclick="calculateTotal()" class="btn btn-primary">Test button</button>
   <h1 class="text-center mt-3 m-5">Welcome to the ShopNow</h1>
 
   <!-- Grocery part -->
