--- a/checkout.html
+++ b/checkout.html
@@ -43,37 +43,40 @@
     </div>
     <!-- icons end here -->
     <!-- Checkout starts here -->
-    <form class="form">
-        <div class="row bord p-5 shadow m-5">
+    <form class="form" id="formulario">
+        <div class="row bord p-5 shadow m-5 form-group">
             <div class="col-sm-6">
                 <div class="mt-3 row">
                     <h5 class="my-auto">First Name :</h5>
-                    <input class="ml-3 name input rounded p-2" type="text" placeholder="First Name" />
-                    <p id="errorName">Numbers in the name are not valid</p>
+                    <input class="ml-3 input firstName rounded p-2 form-control" type="text" name="firstname" id="firstname" placeholder="First Name" />
+                    <p id="errorFirstName">Numbers in the first name are not valid</p>
                 </div>
                 <div class="mt-3 row ">
                     <h5 class="my-auto">Email :</h5>
-                    <input class="ml-3 input rounded p-2" type="email" placeholder="Email" />
+                    <input class="ml-3 input email rounded p-2 form-control" type="email" name="email" id="email" placeholder="Email" />
+                    <p id="errorEmail">Enter a correct email</p>
                 </div>
                 <div class="mt-3 row ">
                     <h5 class="my-auto">Address :</h5>
-                    <input class="ml-3 input rounded p-2" type="text" placeholder="Address" />
+                    <input class="ml-3 input address rounded p-2 form-control" type="text" name="address" id="address" placeholder="Address" />
+                    <p id="errorAddress">Enter a correct address</p>
                 </div>
             </div>
             <div class="col-sm-6">
                 <div class="mt-3 row">
                     <h5 class="my-auto name my-auto">Last Name :</h5>
-                    <input class="ml-3 input rounded p-2" type="text" placeholder="Last Name" />
+                    <input class="ml-3 input lastName rounded p-2 form-control" type="text" name="lastname" id="lastname" placeholder="Last Name" />
+                    <p id="errorLastName">Numbers in the last name are not valid</p>
                 </div>
                 <div class="mt-3 row">
                     <h5 class="my-auto my-auto">Password :</h5>
-                    <input class="ml-3 input password rounded p-2" title="(4-8 characters)" type="password" minlength="4"
-                        maxlength="8" placeholder="Password" />
+                    <input class="ml-3 input password rounded p-2 form-control" title="(4-8 characters)" type="password" minlength="4"
+                        maxlength="8" name="password" id="password" placeholder="Password" />
                     <p id="errorPassword">Enter a correct password</p>
                 </div>
                 <div class="mt-3 row">
                     <h5 class="my-auto my-auto">Phone Number :</h5>
-                    <input class="ml-3 phone input rounded p-2" type="number" placeholder="Phone No." />
+                    <input class="ml-3 input phone rounded p-2 form-control" type="number" name="phone" id="phone" placeholder="Phone No." />
                     <p id="errorPhone">Invalid phone number!!</p>
                 </div>
             </div>
@@ -83,7 +86,7 @@
         <!-- Checkout ends here -->
         <!-- Buy button -->
         <div class="m-5 final text-right">
-            <button type="submit" id="btn" class="p-2 px-4 btn btn-primary shadow-lg" onclick="validate()"><i
+            <button type="button" id="btn" class="p-2 px-4 btn btn-primary shadow-lg" onclick="validate()"><i
                     class="fas fa-cart-arrow-down p-2"></i>Buy</button>
         </div>
     </form>
